--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^11.4.1",
     "@react-native-firebase/auth": "^11.4.1",
+    "@react-native-firebase/firestore": "^11.4.1",
+    "@react-native-firebase/storage": "^11.4.1",
     "@react-navigation/native": "^5.9.4",
     "react": "17.0.1",
     "react-native": "0.64.1",
