--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -193,6 +193,12 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     //firebase google 
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
+    //Firestore
+    implementation 'com.google.firebase:firebase-firestore'
+    //Firebase Auth
+    implementation 'com.google.firebase:firebase-auth'
+    //Firebase Storage
+    implementation 'com.google.firebase:firebase-storage'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
