--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^11.4.1",
+    "@react-native-firebase/auth": "^11.4.1",
+    "@react-native-firebase/firestore": "^11.4.1",
     "@react-native-picker/picker": "^1.15.0",
     "@react-navigation/native": "^5.9.4",
     "react": "17.0.1",
